fixed dark mode styling errors

--- a/client/src/components/myStyles.css
+++ b/client/src/components/myStyles.css
@@ -1,6 +1,9 @@
 .dark {
   background-color: #44494d !important;
   color: lightgray !important;
+  .self-text-content{
+    color: black;
+  }
 }
 
 .selected{
@@ -8,6 +11,7 @@
     #00e500 0px 1px 3px 1px !important;
   
 }
+
 
 .mainContainer {
   background-color: rgb(200, 206, 212);
@@ -349,6 +353,8 @@ input {
 
 .createGroup {
   background-color: white;
+  display: flex;
+  flex-direction: column;
   flex: 0.7;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
@@ -474,9 +480,10 @@ input {
 }
 
 .availableOnline {
-  flex: 0.7;
+  flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
   font-family: "Segoe UI", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -508,12 +515,12 @@ input {
 }
 
 .avl-grp-area {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   flex: 1;
   border-radius: 20px;
+  overflow-y: hidden;
   display: flex;
   flex-direction: column;
-  overflow-y: hidden;
   margin: 5px;
 }
 
